# chatgpt-parser

./: Makefile  manage.py  pyproject.toml
chatgpt_parser/: admin.py  app.py  asgi.py  celery.py  forms.py  models.py  settings.py  urls.py  views.py  wsgi.py
chatgpt_parser/migrations/: 0001_initial.py  0002_alter_textsparsingset_average_attempts_to_uniqueness_and_more.py  0003_alter_textsparsingset_temperature.py  0004_alter_textsparsingset_temperature.py  0005_textsparsingset_failed_texts.py  0006_textsparsingset_low_uniqueness_texts.py  0007_alter_textsparsingset_failed_texts_and_more.py  0008_textsparsingset_task_strings.py
chatgpt_parser/templates/: base.html  delete_text_set.html  generate_texts.html  index.html  login_user.html  text_set_list.html
