[tool.poetry]
name = "chatgpt-parser"
version = "0.1.0"
description = ""
authors = ["Labidahrom <labidahrom@yandex.ru>"]
readme = "README.md"
packages = [{include = "chatgpt_parser"}]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.8"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
django = "^4.2.4"
gunicorn = "^21.2.0"
psycopg2-binary = "^2.9.7"
dj-database-url = "^2.0.0"
django-bootstrap4 = "^23.2"
whitenoise = "^6.5.0"
celery = {extras = ["redis"], version = "^5.3.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
